sass/internal-page/InternalPage.scss
.InternalPage {
  margin-bottom: 20px;

  // sass-lint:disable class-name-format
  .breadcrumb {
    margin-bottom: 0;
    border-bottom: 1px solid $color-pf-black-300;
  }
  // sass-lint:enable class-name-format

  &__page-title {
    padding-bottom: 10px;
    border-bottom: 1px solid $color-pf-black-300;
    font-weight: bold;
  }
}

.BrandMenu__navbar-brand.navbar-brand { // sass-lint:disable-line force-element-nesting class-name-format
  img {
    display: inline-block;
    height: 15px;
    margin: 2px auto;
    vertical-align: top;
  }
}

// sass-lint:disable force-element-nesting class-name-format nesting-depth
.BrandMenu__first-level-menu {
  &.nav.persistent-secondary {
    .LinkMenuItem.active {
      margin-bottom: 0;
    }
  }
}
// sass-lint:enable force-element-nesting class-name-format nesting-depth

.FirstLevelMenuItem {
  span .fa { // sass-lint:disable-line force-element-nesting class-name-format
    padding-right: 8px;
  }
}

.LinkMenuItem {
  span .fa { // sass-lint:disable-line force-element-nesting class-name-format
    padding-right: 8px;
  }
}

.HomePageLink {
  &__icon {
    padding-right: 4px;
  }

  &__link {
    color: $color-pf-white;
    text-decoration: none;
  }

  &__link:hover {
    color: $color-pf-white;
    text-decoration: none;
  }

  &__link:visited {
    color: $color-pf-white;
    text-decoration: none;
  }
}

.LanguageSelect {
  position: relative;
  border: solid $color-pf-black-900;
  border-width: 0 0 0 1px;

  &__dropdown {
    padding: 3.8px 10px;
    padding-right: 24px;
    border: 0;
    outline: none;
    background: $color-pf-black;
    color: $color-pf-black-300;
    font-size: 11px;
    cursor: pointer;
    appearance: none;
  }

  &__dropdown-legacy {
    background: $color-legacy-header-bg-grey;
  }

  &__option {
    background: $color-pf-white;
    color: $color-pf-black-700;
  }

  &__icon {
    position: absolute;
    top: 50%;
    right: 4px;
    transform: translateY(-52%);
    color: $color-pf-black-300;
    cursor: pointer;
    pointer-events: none;
  }
}

// Legacy menu related css

.LegacyAdminConsoleMenu {
  &__fixed-bottom {
    position: fixed;
    bottom: 0;
    left: 0;
    border-bottom: 0;
  }
}

.container-pf-nav-pf-vertical { //sass-lint:disable-line class-name-format force-element-nesting
  margin-top: 65px;
  margin-left: 180px;
}

.container-pf-nav-pf-vertical.collapsed-nav { //sass-lint:disable-line class-name-format force-element-nesting
  margin-left: 0;
}

.container-pf-nav-pf-vertical.hidden-nav { //sass-lint:disable-line class-name-format force-element-nesting
  margin-left: 0;
}

.navbar-brand-txt { //sass-lint:disable-line class-name-format
  margin-left: 7em;
  line-height: 36px;
  text-transform: capitalize;
}

.navbar-brand-icon { //sass-lint:disable-line class-name-format
  position: absolute;
  top: 18px;
  height: 24px;
}

.navbar-iconic { //sass-lint:disable-line class-name-format
  a.dropdown-toggle { //sass-lint:disable-line class-name-format force-element-nesting no-qualifying-elements
    margin-top: 5px;
    background: $color-legacy-header-bg-grey;
    color: $color-legacy-header-text-grey;
  }

  a.dropdown-toggle:hover { //sass-lint:disable-line class-name-format force-element-nesting no-qualifying-elements
    background: $color-legacy-header-bg-grey;
    color: $color-white;
    font-weight: bold;
  }

  a.dropdown-toggle:focus { //sass-lint:disable-line class-name-format force-element-nesting no-qualifying-elements
    background: $color-legacy-header-bg-grey;
    color: $color-white;
    font-weight: bold;
  }

  .HomePageLink__link {
    margin-top: 5px;
    color: $color-legacy-header-text-grey;
  }

  .HomePageLink__link:hover {
    background: $color-legacy-header-bg-grey;
    color: $color-white;
    font-weight: bold;
  }

  .HomePageLink__link:focus {
    background: $color-legacy-header-bg-grey;
    color: $color-white;
    font-weight: bold;
  }

  .LanguageSelect {
    margin-top: 15px;
  }
}

